fix alignment issues

--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ h1 {
 }
 
 img {
-    height: 500px;
+    height: 400px;
     width; auto;
+
 }
 
 div {
     display: inline-block;
+    margin: 20px;
 }
 
 h3 { 
@@ -19,11 +21,10 @@ h3 {
     color: #2a1780; 
 }
 
-.recipes,
 .ingredients,
 .directions {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .ingredients {
@@ -34,11 +35,17 @@ h3 {
 .directions {
     background-color: rgb(142, 237, 180);
    
-
 }
 
 .links button {
     background-color: plum;
     font-size: 18px;
     padding: 8px 16px;
+}
+
+.recipe {
+    vertical-align: text-bottom;
+    border: 2px solid black;
+
+
 }
